@@ -1,5 +1,9 @@
 2004-10-23  Matti Aarnio  <mea@zmailer.org>
 
+	* scheduler/scheduler.c:
+	    Hunting unnecessarily open file-descriptors in scheduler,
+	    and its TimeServer subprocess.
+
 	* lib/zshmmibattach.c:
 	    Don't keep around the file descriptor associated with
 	    the opened memory segment.  It isn't needed, and uses up
